# gliclass-as-a-service

./: Dockerfile.gliclass  README.md  compose.yml  locustfile.py  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/src/: __init__.py  celery_worker.py  gliclass.py  models.py  router.py  tasks.py  ui.py
dependencies/: requirements-clean.txt  requirements-in.txt  requirements-out.txt  requirements-ui.txt
scripts/: test-predict.sh
