[tool.poetry]
name = "gliclass-as-a-service"
version = "1.0.0"
description = ""
authors = ["henrikalbihn <61203850+henrikalbihn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aioredis = "2.0.1"
aiosignal = "1.3.1"
amqp = "5.2.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
billiard = "4.2.0"
blinker = "1.8.2"
brotli = "1.1.0"
celery = "5.4.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
configargparse = "1.7"
datasets = "2.21.0"
dill = "0.3.8"
fastapi = "0.114.0"
fastapi-cache2 = "0.1.8"
filelock = "3.16.0"
flask = "3.0.3"
flask-cors = "5.0.0"
flask-login = "0.6.3"
flower = "2.0.1"
flupy = "1.2.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
gevent = "24.2.1"
geventhttpclient = "2.3.1"
gliclass = "0.1.5"
gputil = "1.4.0"
greenlet = "3.1.0"
gunicorn = "23.0.0"
h11 = "0.14.0"
hf-transfer = "0.1.8"
hiredis = "3.0.0"
httptools = "0.6.1"
huggingface-hub = "0.24.6"
humanize = "4.10.0"
idna = "3.8"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
kombu = "5.4.0"
locust = "2.31.5"
loguru = "0.7.2"
markupsafe = "2.1.5"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
networkx = "3.3"
numpy = "1.26.4"
packaging = "24.1"
pandas = "2.2.2"
pendulum = "3.0.0"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
pyarrow = "17.0.0"
pydantic = "2.9.1"
pydantic-core = "2.23.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
redis = "5.0.8"
regex = "2024.7.24"
requests = "2.32.3"
safetensors = "0.4.5"
scikit-learn = "1.5.1"
scipy = "1.14.1"
setuptools = "74.1.2"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.38.5"
sympy = "1.13.2"
threadpoolctl = "3.5.0"
time-machine = "2.15.0"
tokenizers = "0.19.1"
torch = "2.4.1"
tornado = "6.4.1"
tqdm = "4.66.5"
transformers = "4.44.2"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uvicorn = "0.30.6"
uvloop = "0.20.0"
vine = "5.1.0"
watchfiles = "0.24.0"
wcwidth = "0.2.13"
websockets = "13.0.1"
werkzeug = "3.0.4"
xxhash = "3.5.0"
yarl = "1.11.1"
zope-event = "5.0"
zope-interface = "7.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"

[tool.poetry.scripts]
gliclass = 'app.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
